# gemini-hybrid-dca-dip-buying-bot

./: .env_example  .flake8  .gitignore  LICENSE  README.md  __main__.py  dev-requirements.txt  gemini_bot_service.service  launch_gemini_bot.sh  pyproject.toml  requirements.txt  setup_bot_as_service_prod.sh
bot/: __init__.py  actions.py  config.py  credentials.py  heartbeat.py  heuristics.py  main.py  models.py  rest_api_handler.py  trade.py  utils.py  validate_config.py
bot/db/: engine.py  main.py  models.py  session.py
bot/models/: __init__.py
